Aligned text content in benefits section correctly for mobile and then larger screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,7 @@ main {
 .btn-info,
 .btn-learn-more {
     background: #2e151b;
+    box-shadow: 0 5px 5px 0 rgba(32,33,36,0.50);
 }
 
 /* STYLING FOR - BUTTON IN HOVER STATE */
@@ -255,6 +256,7 @@ h6 {
 
 .benefits-container {
     margin-top: 100px;
+    
 }
 
 .hospitality-benifit-img {
@@ -296,7 +298,8 @@ h6 {
 }
 
   
-@media (min-width: 910px){
+@media (min-width: 992px){
+
     /* FONT ADJUSTMENTS FOR LARGER SCREENS */
     .hero-text {
         text-align: left;
